--- a/src/App.css
+++ b/src/App.css
@@ -118,32 +118,50 @@ section {
   width: 360px;
   height: 480px;
   object-fit: cover;
-  border-radius: 5px;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
   display: block;
   transform: rotate(-3deg);
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+
+  /* 드래그 방지 */
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+
+  /* 우클릭 방지 (선택) */
+  pointer-events: auto;
 }
 
 /* 테이프 효과 */
 .photo-tape {
   position: absolute;
-  top: -15px;
+  top: -30px;
   left: 50%;
   transform: translateX(-50%) rotate(-2deg);
-  width: 120px;
-  height: 40px;
-  background: rgba(255, 255, 255, 0.5);
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0.6) 0%,
-    rgba(255, 255, 255, 0.4) 50%,
-    rgba(255, 255, 255, 0.6) 100%
-  );
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1),
-    inset 0 1px 1px rgba(255, 255, 255, 0.8);
+  width: 150px;
+  height: 60px;
   z-index: 10;
-  opacity: 0.9;
+  opacity: 0.8;
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+
+  /* 드래그 방지 */
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+
+  /* 우클릭 방지 (선택) */
+  pointer-events: auto;
 }
 
 .photo-box {
@@ -1163,8 +1181,9 @@ section {
   }
 
   .photo-tape {
-    width: 100px;
-    height: 35px;
+    top: -25px;
+    width: 130px;
+    height: 50px;
   }
 
   .photo-box {
@@ -1257,8 +1276,8 @@ section {
   }
 
   .photo-tape {
-    width: 90px;
-    height: 30px;
+    width: 110px;
+    height: 50px;
   }
 
   .map-buttons {
