--- a/src/App.css
+++ b/src/App.css
@@ -626,6 +626,9 @@ section {
 .wedding-date-content {
   max-width: 600px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .date-info {
@@ -652,6 +655,8 @@ section {
   padding: 25px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   margin-bottom: 40px;
+  width: 100%;
+  max-width: 450px;
 }
 
 .calendar-header {
@@ -726,10 +731,10 @@ section {
 }
 
 .countdown-label {
-  font-size: 16px;
+  font-size: 18px;
   color: #6d4c41;
   margin-bottom: 20px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .countdown-timer {
@@ -1077,6 +1082,7 @@ section {
   cursor: pointer;
   font-size: 15px;
   transition: all 0.3s;
+  color: black;
 }
 
 .tab-btn.active {
@@ -1181,6 +1187,7 @@ section {
   .main-photo {
     width: 320px;
     height: 420px;
+    box-shadow: 0 7px 12px rgba(0, 0, 0, 0.2);
   }
 
   .photo-tape {
@@ -1226,7 +1233,7 @@ section {
   }
 
   .time-text {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .calendar {
@@ -1276,6 +1283,7 @@ section {
   .main-photo {
     width: 280px;
     height: 380px;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
   }
 
   .photo-tape {
@@ -1324,11 +1332,11 @@ section {
   }
 
   .time-text {
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .calendar {
-    padding: 15px;
+    padding: 20px;
   }
 
   .calendar-header h3 {
