--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,11 @@ section {
   height: 60px;
   z-index: 10;
   opacity: 0.8;
+  -webkit-opacity: 0.8; /* Safari용 */
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 
   filter: drop-shadow(0 1px 4px rgba(70, 70, 70, 0.15))
     drop-shadow(0 2px 4px rgba(16, 16, 16, 0.1));
