--- a/src/App.css
+++ b/src/App.css
@@ -143,12 +143,13 @@ section {
   position: absolute;
   top: -30px;
   left: 50%;
-  transform: translateX(-50%) rotate(-2deg);
+  transform: translateZ(0) translateX(-50%) rotate(-2deg);
   width: 150px;
   height: 60px;
   z-index: 10;
   opacity: 0.8;
   -webkit-opacity: 0.8; /* Safari용 */
+  -webkit-transform: translateZ(0) translateX(-50%) rotate(-2deg);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 
