--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #ffffff 0%, #fcb69f 100%);
+  background: linear-gradient(135deg, #ffffff 0%, #fdadbc 100%);
   padding: 40px 20px;
 }
 
