--- a/src/App.css
+++ b/src/App.css
@@ -1296,6 +1296,11 @@ section {
 }
 
 .account-notice {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 10px;
